--- a/src/components/Door/styles.module.scss
+++ b/src/components/Door/styles.module.scss
@@ -5,12 +5,13 @@
   width: var(--door-w);
   height: var(--door-h);
 
-  margin: 5px;
+  margin: 10px 25px;
 }
 
 .frame {
   background-color: chocolate;
   display: flex;
+  position: relative;
   flex-direction: column;
   flex-grow: 1;
   width: 90%;
@@ -26,7 +27,6 @@
   display: flex;
   align-items:center;
   flex-direction: column;
-  justify-content: space-between;
   padding-bottom: 16px;
   flex-grow: 1;
 }
@@ -47,9 +47,16 @@
   width: 15px;
   height: 15px;
   border-radius: 5rem;
+  position:absolute;
+  top: 140px;
   background-color: brown;
   align-self: flex-start;
   margin-left: 20px
+}
+
+.gift {
+  position: absolute;
+  bottom: 16px;
 }
 
 .active {
